Fixes hero button text wraping

--- a/source/sass/blocks/form-wrapper.scss
+++ b/source/sass/blocks/form-wrapper.scss
@@ -313,6 +313,7 @@
     span {
       order: 2;
       flex: 1 1 auto;
+      padding-left: 0;
       font: 400 14px / 16px $ff-main;
       color: var(--text-color);
       opacity: 0.8;
