--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -119,6 +119,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     text-transform: uppercase;
+    hyphens: auto;
     text-align: left;
     color: var(--color);
     background-color: var(--bg-color);
