--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -14,12 +14,12 @@
     background: linear-gradient(180deg, var(--themed-dark) 8%, rgba(4, 24, 39, 0) 100%);
   }
   @include vp-1023 {
-    min-height: 100px;
+    min-height: 93px;
     padding-top: 16px;
   }
 
   @include vp-767 {
-    min-height: 70px;
+    min-height: 67px;
     padding-top: 10px;
   }
 }
